derive/tests/ui/enum_mock.stderr
error: can only derive `CallReal` for structs
 --> tests/ui/enum_mock.rs:4:1
  |
4 | enum MyMock {
  | ^^^^
